# quake

./: .editorconfig  Cargo.toml  LICENSE  README.md  REUSE.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
contrib/man/: quake.1.rst
crates/nu-protocol/src/: span.rs
crates/quake-core/: Cargo.toml
crates/quake-core/src/: context.rs  engine.rs  error.rs  errors.rs  event.rs  graph.rs  lib.rs  metadata.rs  runtime.rs  task.rs  utils.rs
crates/quake-core/src/graph/: error.rs
crates/quake-logger/: Cargo.toml
crates/quake-nu-engine/: Cargo.toml
crates/quake-nu-engine/src/: lib.rs  mod.rs
crates/quake-nu-plugin/: Cargo.toml
crates/quake-nu-plugin/src/: lib.rs  main.rs
crates/quake-nu-plugin/src/commands/: mod.rs  task.rs
crates/quake-runtime/: Cargo.toml
crates/quake-runtime/src/: lib.rs
crates/quake-test-support/: Cargo.toml
crates/quake_engine/src/: commands.rs  utils.rs
quake-core/: Cargo.toml
quake-core/src/: engine.rs  error.rs  events.rs  graph.rs  lib.rs  runtime.rs  tasks.rs
quake-core/src/context/: metadata.rs  mod.rs
quake-logger/: Cargo.toml
quake-nu-engine/: Cargo.toml
quake-nu-engine/src/: eval.rs  lib.rs  parse.rs  project.rs
quake-nu-engine/src/commands/: def_task.rs  dependency.rs  mod.rs  transformation.rs
quake-runtime/: Cargo.toml
quake-runtime/src/: lib.rs
quake-test-support/: Cargo.toml
src/: main.rs
