cargo-features = ["edition2024"]

[package]
name = "quake-nu-engine"
version.workspace = true
edition = "2024"
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nu-cli.workspace = true
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-engine.workspace = true
nu-glob.workspace = true
nu-protocol.workspace = true
parking_lot.workspace = true
serde = { workspace = true, public = true}
quake-core.workspace = true

[target."cfg(windows)".dependencies]
nu-ansi-term.workspace = true
nu-utils.workspace = true

[lints]
workspace = true
