[package]
name = "quake-core"
version = "0.1.0"
edition = "2021"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true


[features]
default = ["serde"]
serde = ["dep:serde"]

[lints]
workspace = true
