[package]
name = "quake-nu-plugin"
version = "0.1.0"
edition = "2021"
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
nu-plugin.workspace = true
nu-protocol = { workspace = true, features = ["plugin"] }
quake-core.workspace = true
serde = { workspace = true, features = ["derive"] }
typetag = "0.2.16"

[dev-dependencies]
nu-plugin-test-support.workspace = true

[lints]
workspace = true
